<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/pink"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/zag"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/con"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:textColor="@color/black"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/dataTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/content"
        android:text="@string/data"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="4dp" />

    <ImageView
        android:id="@+id/korzina"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/ic_baseline_delete_24"
        app:layout_constraintTop_toBottomOf="@id/dataTv"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>