<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/zag"
        android:textSize="18sp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/zagolovok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="22dp"
        android:hint=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/zagtex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/zagolovok"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/cont"
        android:textSize="18sp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/kontent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/zagtex"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="22dp"
        android:hint=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tvData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/kontent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/data"
        android:textSize="18sp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="240dp"/>

    <TextView
        android:id="@+id/data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvData"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="22dp"
        android:hint="@string/veb"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="100dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_bat"
        android:textSize="16sp"
        android:text="@string/soh"
        android:layout_marginBottom="26dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>